Testing commit to new svn repo.
git-svn-id: https://svn.java.net/svn/glazedlists~svn/trunk@2312 696c4f5c-992c-4387-df9e-f6c076136008

--- a/pom.xml
+++ b/pom.xml
@@ -12,8 +12,8 @@
     <description>Event-driven lists for dynamically filtered and sorted tables</description>
     <url>http://publicobject.com/glazedlists/</url>
     <issueManagement>
-        <system>java.net</system>
-        <url>https://glazedlists.dev.java.net/issues</url>
+        <system>Jira</system>
+        <url>http://java.net/jira/browse/GLAZEDLISTS</url>
     </issueManagement>
     <inceptionYear>2003</inceptionYear>
     <mailingLists>
