--- a/pom.xml
+++ b/pom.xml
@@ -2,12 +2,17 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-
     <modelVersion>4.0.0</modelVersion>
     <groupId>net.java.dev.glazedlists</groupId>
     <artifactId>@glazedlists.artifactId@</artifactId>
     <version>@glazedlists.version@</version>
     <packaging>jar</packaging>
+    <parent>
+        <groupId>net.java</groupId>
+        <artifactId>jvnet-parent</artifactId>
+        <version>1</version>
+    </parent>
+    
     <name>Glazed Lists</name>
     <description>Event-driven lists for dynamically filtered and sorted tables</description>
     <url>http://www.glazedlists.com/</url>
