Issues GLAZEDLISTS-559, GLAZEDLISTS-562, GLAZEDLISTS-563.
git-svn-id: https://svn.java.net/svn/glazedlists~svn/trunk@2361 696c4f5c-992c-4387-df9e-f6c076136008

--- a/build.xml
+++ b/build.xml
@@ -420,8 +420,8 @@
         <mkdir dir="extensions/swinglabs/lib"/>
         <java classname="ca.odell.glazedlists.impl.HttpClient">
             <classpath path="${classes.dir}"/>        	
-            <arg value="${download.lib.url}/swinglabs/1.0.0/swingx.jar"/>
-            <arg value="extensions/swinglabs/lib/swingx.jar"/>
+            <arg value="${download.lib.url}/swinglabs/1.6.5-1/swingx-all.jar"/>
+            <arg value="extensions/swinglabs/lib/swingx-all.jar"/>
         </java>
         <javac destdir="${classes.dir}" srcdir="extensions/swinglabs/source" debug="on" source="${java.target.version}" target="${java.target.version}" deprecation="off">
             <classpath>
