--- a/extensions/hibernate/etc/hibernate.properties
+++ b/extensions/hibernate/etc/hibernate.properties
@@ -436,12 +436,12 @@ hibernate.jdbc.use_streams_for_binary true
 
 ## set a prefix for cache region names
 
-hibernate.cache.region_prefix hibernate.test
+#hibernate.cache.region_prefix hibernate.test
 
 
 ## disable the second-level cache
 
-#hibernate.cache.use_second_level_cache false
+hibernate.cache.use_second_level_cache false
 
 
 ## enable the query cache
@@ -458,7 +458,7 @@ hibernate.cache.region_prefix hibernate.test
 
 #hibernate.cache.provider_class org.hibernate.cache.EhCacheProvider
 #hibernate.cache.provider_class org.hibernate.cache.EmptyCacheProvider
-hibernate.cache.provider_class org.hibernate.cache.HashtableCacheProvider
+#hibernate.cache.provider_class org.hibernate.cache.HashtableCacheProvider
 #hibernate.cache.provider_class org.hibernate.cache.TreeCacheProvider
 #hibernate.cache.provider_class org.hibernate.cache.OSCacheProvider
 #hibernate.cache.provider_class org.hibernate.cache.SwarmCacheProvider
