--- a/build.xml
+++ b/build.xml
@@ -185,6 +185,7 @@
 			<packageset dir="extensions/treetable/source"><exclude name="**/impl/**"/></packageset>			
             <classpath><fileset dir="extensions/" includes="**/lib/*.jar"/></classpath>
             <link href="http://docs.oracle.com/javase/6/docs/api/"/>
+			<link href="http://docs.oracle.com/javafx/2/api/"/>
             <link href="http://help.eclipse.org/help33/index.jsp?topic=/org.eclipse.platform.doc.isv/reference/api/overview-summary.html"/>
             <link href="http://www.jdocs.com/formlayout/1.0.4/api/" packagelistloc="extensions/jgoodiesforms/lib"/>
             <link href="http://nachocalendar.sourceforge.net/doc/"/>
@@ -316,7 +317,7 @@
 		description="Compile the default components of the source.">
 	</target>
 
-	<target name="compileall" depends="core,migrationkit,swing,io,calculation,swt,ktable,issuesbrowser,swinglabs,hibernate,icu4j"
+	<target name="compileall" depends="core,migrationkit,swing,io,calculation,swt,ktable,issuesbrowser,swinglabs,hibernate,icu4j,javafx"
 		description="Compile all components of the source.">
 	</target>
 
@@ -501,6 +502,20 @@
         <javac destdir="${classes.dir}" srcdir="extensions/hibernate/source" debug="on" source="${java.target.version}" target="${java.target.version}" deprecation="off">
             <classpath>
                 <fileset dir="extensions/hibernate/lib/" includes="*.jar"/>
+            </classpath>
+        </javac>
+    </target>
+
+	<target name="javafx" depends="core">
+        <mkdir dir="extensions/javafx/lib"/>
+        <java classname="ca.odell.glazedlists.impl.HttpClient">
+            <classpath path="${classes.dir}"/>
+            <arg value="${download.lib.url}/javafx-6/2.2.21/jfxrt.jar"/>
+            <arg value="extensions/javafx/lib/jfxrt.jar"/>
+        </java>     
+        <javac destdir="${classes.dir}" srcdir="extensions/javafx/source" debug="on" source="${java.target.version}" target="${java.target.version}" deprecation="off">
+            <classpath>
+                <fileset dir="extensions/javafx/lib/" includes="*.jar"/>
             </classpath>
         </javac>
     </target>
